  - Allowed use of wildcards in LDAP address book search expressions. Issue
    is specific to 1.4.5cvs and not present in older versions.
  - Security: Rewrite advanced identity handling to remove call to extraction
    of all POST values. [CVE-2005-2095]
  - Moved imap_logout call in view_header.php to the end of the script after
    displayPageheader is called.

Version 1.4.5 Release Candidate 1 - 15 June 2005
------------------------------------------------
  - Make SquirrelSpell work with safe_mode enabled, if using PHP >=4.3.0.
    Patch by Ray Ferguson, backported from devel.
  - Add support for Mail-Followup-To header, from devel.
  - Remove is_readable($data_dir) test in configtest, because SquirrelMail
    functions fine with stricter permissions on that dir.
  - 24hr clock format should include a leading 0.
  - Fixed uid based authentication in administrator plugin. Thanks to
    Gareth Johnston.
  - Added three Tahoma stylesheets.
  - Added required code to display error message that might occur when options
    are saved.
  - Fixed translations of "On DATE, AUTHOR Wrote" and "AUTHOR Wrote" replies.
  - Added trailing slash for data directory used by global file based
    address book (#1105760).
  - Fixed possible PHP E_ALL warnings in translate plugin with GPLtrans engine
    (#1100789).
  - Fixed adding addresses to global address books.
  - Fix typos in Deliver.class.php which caused an error with PHP 5.
  - 'Priority' and 'Importance' headers are now also recognised, next to the
    'X-Priority' header that we've supported since a long time. From devel.
  - Fix administrator plugin that was too picky about newlines in the
    "admins" file.
  - Added blank.png for missing image support.
  - Fixed cid handling from Outlook Express client when it doesn't create a
    valid content-id to go with CID tag.  This resolves #855320, and should
    be considered a workaround.  The real issues needs resolving by MS.